syntax = "proto3";
option go_package = "github.com/Daniel-W-Innes/shopify-add/proto";

message Response {
  int32 transaction_id = 1;
  bool successful = 2;
}

message ImageAtomic {
  int32 width = 1;
  int32 height = 2;
  bytes image_data = 3;
}

message ImageInfo {
  repeated string tags = 1;
  bool is_private = 2;
}

message Image{
  int32 transaction_id = 1;
  ImageAtomic image = 2;
  ImageInfo info = 3;
}

message ImageTile {
  int32 transaction_id = 1;
  ImageAtomic image = 2;
  int32 number = 3;
  int32 num_x = 4;
  int32 num_y = 5;
}

message ImageTileRegistration {
  int32 transaction_id = 1;
  ImageInfo info = 2;
}


service ShopifyAdd {
  rpc ImageAdd(Image) returns(Response){}
  rpc ImagesAdd(stream Image) returns(stream Response){}
  rpc ImageAddTiles(stream ImageTile) returns (stream Response){}
  rpc ImageRegisterTiles(stream ImageTileRegistration) returns (stream Response){}
}